<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <android.support.constraint.Guideline
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/guideline2"
      app:layout_constraintGuide_begin="255dp"
      android:orientation="horizontal"
      />
  <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/guideline2"
      >
    <TextView
        android:id="@+id/text_match_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LemonChiffon"
        android:text="@string/long_string"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/text_will_gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_test_gone_left"
        android:layout_below="@id/text_match_parent"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:id="@+id/text_gone_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_test_gone_right"
        android:layout_toEndOf="@id/text_will_gone"
        android:layout_marginStart="50dp"
        android:layout_alignBaseline="@id/text_will_gone"
        android:layout_below="@id/text_match_parent"
        />
  </RelativeLayout>

  <TextView
      android:text="@string/long_string"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/textView3"
      app:layout_constraintTop_toTopOf="@+id/guideline2"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:background="@color/LemonChiffon"
      android:gravity="center"
      />

  <TextView
      android:text="@string/name_test_gone_left"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView4"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginStart="20dp"
      app:layout_constraintTop_toBottomOf="@id/textView3"
      />
  <TextView
      android:id="@+id/text_click_gone_constraint"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toRightOf="@id/textView4"
      app:layout_constraintTop_toBottomOf="@id/textView3"
      app:layout_constraintRight_toRightOf="parent"
      android:text="@string/name_test_gone_right"
      android:layout_marginStart="50dp"
      app:layout_constrainedWidth="true"
      app:layout_constraintHorizontal_bias="0"
      app:layout_goneMarginStart="0dp"
      />

</android.support.constraint.ConstraintLayout>