<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.constraint.Guideline
      android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/guideline"
      app:layout_constraintGuide_begin="238dp" android:orientation="horizontal"
      />

  <TextView
      android:text="@string/invite_friends"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView"
      android:textSize="16sp"
      app:layout_constraintLeft_toRightOf="@+id/imageView" android:layout_marginLeft="8dp"
      app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView2"
      app:layout_constraintRight_toLeftOf="@+id/guideline3" android:layout_marginRight="8dp"
      app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
      android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
      />

  <TextView
      android:text="@string/invite_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView2"
      android:textSize="12sp"
      app:layout_constraintLeft_toRightOf="@+id/imageView" android:layout_marginLeft="8dp"
      app:layout_constraintRight_toLeftOf="@+id/guideline3" android:layout_marginRight="8dp"
      android:layout_marginBottom="39dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"
      app:layout_constraintHorizontal_bias="0.0"
      android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
      />

  <TextView
      android:text="@string/reward"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView6"
      android:textSize="16sp"
      app:layout_constraintLeft_toRightOf="@+id/imageView2" android:layout_marginLeft="8dp"
      app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView7"
      android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.961"
      android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
      />

  <android.support.constraint.Guideline
      android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/guideline3"
      app:layout_constraintGuide_begin="192dp" android:orientation="vertical"
      />

  <TextView
      android:text="@string/reward_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView7"
      android:textSize="12sp"
      app:layout_constraintLeft_toRightOf="@+id/imageView2" android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      android:layout_marginBottom="38dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"
      android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
      android:id="@+id/imageView"
      android:layout_marginLeft="16dp" app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"
      android:layout_marginStart="16dp"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
      android:id="@+id/imageView2"
      android:layout_marginRight="126dp" app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="@+id/guideline3"
      app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"
      android:layout_marginStart="8dp" android:layout_marginEnd="126dp"
      />

  <android.support.constraint.Guideline
      android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/guideline4"
      app:layout_constraintGuide_begin="359dp" android:orientation="horizontal"
      />

  <Button
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:id="@+id/button7"
      android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"
      android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline"
      android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/guideline3" android:layout_marginRight="8dp"
      android:background="@null"
      android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
      />

  <Button
      android:id="@+id/button8"
      app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"
      android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
      android:background="@null"
      app:layout_constraintVertical_bias="0.0"
      android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="@+id/guideline3"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
      />

  <ImageView
      android:layout_width="2dp"
      android:layout_height="0dp"
      android:id="@+id/imageView3"
      app:layout_constraintBottom_toTopOf="@+id/guideline4"
      app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
      app:layout_constraintVertical_bias="0.0"
      app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toLeftOf="parent"
      android:background="?android:attr/dividerVertical"
      />

  <ImageView
      android:layout_width="0dp"
      android:layout_height="2dp"
      android:id="@+id/imageView4"
      android:layout_marginBottom="0dp"
      app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
      app:layout_constraintVertical_bias="1.0"
      android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintBottom_toTopOf="@id/guideline4"
      android:background="?android:attr/dividerHorizontal"
      app:layout_constraintHorizontal_bias="0.0"
      />

</android.support.constraint.ConstraintLayout>
